<resources>
    <string name="app_name">Movies</string>
    <string name="summary">Summary</string>
    <string name="critic">" Movie review"</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="read_more">Read More</string>
    <string name="save">Save</string>
    <string name="error_movies">Error on get movies, refresh and try again.</string>
    <string name="error_details">Error on set details movie!!</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="favoriteRemove">Movie removed from favorites!</string>
    <string name="favoriteAdd">Movie added to favorites!</string>
    <string name="favoriteUpdated">Updated favorites!</string>
</resources>